1.稀疏数组 2.队列 3.单链表 4.双链表

--- a/data-structures-algorithms/pom.xml
+++ b/data-structures-algorithms/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>design-mode</artifactId>
+    <artifactId>data-structures-algorithms</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -21,16 +21,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
-            <version>3.3.0</version>
         </dependency>
     </dependencies>
 </project>
