--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,19 @@
     <modules>
         <module>netty</module>
         <module>design-mode</module>
+        <module>data-structures-algorithms</module>
     </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
+    </dependencies>
 </project>
