--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,12 @@
         <module>data-structures-algorithms</module>
         <module>interview</module>
         <module>juc</module>
+        <module>jvm</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencyManagement>
