--- a/interview/pom.xml
+++ b/interview/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-test-framework</artifactId>
+            <version>8.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
