--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
                 <artifactId>junit-jupiter</artifactId>
                 <version>5.7.2</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>31.1-jre</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
